--- a/templates/ansible_vars/all.j2
+++ b/templates/ansible_vars/all.j2
@@ -2,17 +2,18 @@
 ## ========= General ========= ##
 ntp_timezone: "{{ general_data.ntp_timezone }}"
 project_name: {{ general_data.project_name }}
+ansible_dir: "{{ ansible_dir }}"
 
 ## ========= Setup Headscale ========= ##
 url: "{% if setup_data.url %}https://controlplane.{{ setup_data.domain }}{% else %}https://controlplane.redteam.com{% endif %}"
-domain: {{ setup_data.domain }}
+domain: controlplane.{{ setup_data.domain }}
 base_domain_headscale: {{ setup_data.base_domain_local }}
 acme_email: "noemail@{{ setup_data.domain }}"
 dns_provider: {{ setup_data.dns_provider }}
 listen_port: 27896
 exp_time_preauthkeys: {{ setup_data.exp_time_preauthkeys }}
 pre_auth_user:
-{%- for client in setup_data.user_client %}
+{% for client in setup_data.user_client %}
   - {{ client }}
 {% endfor %}
 
@@ -26,14 +27,14 @@ redirector:
   {% endfor -%}
 
   {% if c2_data.get('redir_dns') %}
-  dns: "redir_dns"
+  dns: "{{ c2_data.redir_dns.vm_hostname }}"
   {% endif %}
-c2_machine: "c2_srv"
+c2_machine: "{{ c2_data.framework.vm_hostname }}"
 {% endif %}
 {% if phish_data %}
 redirector:
-  phish: "redir_phish"
-phish_machine: "phish_srv"
+  phish: "{{ phish_data.redir.vm_hostname }}"
+phish_machine: "{{ phish_data.server.vm_hostname }}"
 {% endif %}
 
 ## ========= Terraform ========= ##
