--- a/templates/terraform_main/headscale.j2
+++ b/templates/terraform_main/headscale.j2
@@ -1,4 +1,11 @@
 {% if output_type == 'headscale' %}
+{% if headscale_data.provider == "azure" %}
+resource "azurerm_resource_group" "rg" {
+  name     = "segment_c2_network"
+  location = "{{ headscale_data.region }}"
+}
+{% endif %}
+
 module "headscale" {
 {% if headscale_data.provider == "aws" %}
     source              = "{{ TERRAFORM_PATH }}/modules/aws"
@@ -8,8 +15,10 @@ module "headscale" {
     username_vm         = "{{ headscale_data.vm_username }}"
 {% elif headscale_data.provider == "azure" %}
     source              = "{{ TERRAFORM_PATH }}/modules/azure"
-    resource_group_name = "segment_net_resources"
+    resource_group_name = azurerm_resource_group.rg.name
+    location            = azurerm_resource_group.rg.location
     instance_name       = "headscale"
+    vm_size             = "Standard_B1s"
     computer_name       = "{{ headscale_data.vm_hostname }}"
     username_vm         = "{{ headscale_data.vm_username }}"
     tags_segment        = "headscale"
@@ -93,6 +102,22 @@ resource "local_file" "ansible_inventory" {
   content  = local.inventory_content
   filename = "${path.root}/inventory.ini"
 }
+
+output "network_instance_passwords" {
+  value = [for instance in local.headscale_instances : instance.pass]
+  sensitive = true
+}
+
+output "network_instance_ssh_details" {
+  value = [for instance in local.headscale_instances : "${instance.hostname} = ssh ${instance.user}@${instance.ip}"]
+}
+
+{% if headscale_data.provider == "azure" -%}
+provider "azurerm" {
+  skip_provider_registration = "true"
+  features {}
+}
+{% endif %}
 
 {%- elif output_type == 'c2' -%}
 {% include 'c2_segment.j2' %}
