--- a/templates/terraform/output.j2
+++ b/templates/terraform/output.j2
@@ -26,9 +26,10 @@ Segment: Phishing
     - Provider: {{ phish_data.provider }}
     - Domain: {{ phish_data.domain }}
 {% endif %}
+
 ==========================================
 Summary:
-   - The above configuration and resources will be deployed.
+   - The above configuration and resources have been generated for terraform and ansible.
    - Ensure you have reviewed and validated all details.
 
 Warning:
